working through change requests

--- a/index.html
+++ b/index.html
@@ -444,15 +444,8 @@
                         <h5 class="heavy">Our story is what guides the experiences we create</h5>
                     </div>
                     <article class="row">
-                        <p>Buying technology today often seems to be just about the technology itself, a purely aesthetic representation
-                            of the product, not really about what it's used for. While this may drive the initial sale, we
-                            believe that technology ultimately exists to help people with what they’re up against and to
-                            empower them to achieve more.</p>
-                        <p>Our job at Microsoft Store is to remove barriers between people, their ideas, and ways to pursue
-                            them. It’s not just presenting great products—it's showing how to use them. It’s highlighting
-                            the creators of these products, sharing their stories, and inviting customers to co-create with
-                            us. Ultimately, it’s bringing people together and in that moment helping them achieve the new,
-                            the possible, and the impossible. </p>
+                        <p>Buying technology today often seems to be just about the technology itself, a purely aesthetic representation of the product, not really about what it's used for. While this may drive the initial sale, we believe that technology ultimately exists to help people with what they’re up against and to empower them to achieve more.</p>
+                        <p>Our job at Microsoft Store is to remove barriers between people, their ideas, and ways to pursue them. It’s not just presenting great products—it's showing how to use them. It’s highlighting the creators of these products, sharing their stories, and inviting customers to co-create with us. Ultimately, it’s bringing people together and in that moment helping them achieve the new, the possible, and the impossible. </p>
                         <p>That's what we do in Microsoft Store.</p>
                     </article>
                     <div class="row ">
@@ -789,15 +782,20 @@
                             excite them, how to inspire them. It's a conversation essentially with your readers. It's our
                             new editorial system. </h5>
                     </div>
+                    
+                    <!-- spacing -->
+                    <div class="row" role="presentation"></div>
+                    <div class="row" role="presentation"></div>
+
                     <div class="row">
                         <div class="mag">
                             <h2 class="light">Treat it like a magazine</h2>
                             <div class="thirds">
                                 <div class="title">Editorial style </div>
-                                <div class="title">Editorial approach</div>
+                                <div class="desc">Conversational, sensory, joyful</div>
                             </div>
                             <div class="thirds">
-                                <div class="desc">Conversational, sensory, joyful</div>
+                                <div class="title">Editorial approach</div>
                                 <div class="desc">Curation, storytelling</div>
 
                             </div>
@@ -822,6 +820,12 @@
                             experiences. They are looking for new stories, new communities, and new things they can achieve.
                             </h5>
                     </div>
+
+                    <!-- spacing -->
+                    <div class="row" role="presentation"></div>
+                    <div class="row" role="presentation"></div>
+
+
                     <div class="row">
                         <div class="thirds">
                             <div class="title">Conversational</div>
@@ -837,7 +841,8 @@
                             <div class="desc">Create a sense of well-being and empowerment</div>
                         </div>
                     </div>
-                    <div class="row">
+
+                    <div class="row-lined dark">
                         <div class="dos">
                             <p class="title">Do this</p>
                         </div>
@@ -846,7 +851,7 @@
 
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row-lined dark">
                         <div class="dos">
                             <p>Editors, Editors' Picks</p>
 
@@ -855,7 +860,8 @@
                             <p>Staff, Staff Picks</p>
                         </div>
                     </div>
-                    <div class="row">
+
+                    <div class="row-lined dark">
                         <div class="dos">
                             <p>
                                 Just dropped
@@ -874,7 +880,8 @@
                             <p>New PC Games</p>
                         </div>
                     </div>
-                    <div class="row">
+
+                    <div class="row-lined dark">
                         <div class="dos">
                             <p>Editor's Picks</p>
                             <p>
@@ -889,7 +896,8 @@
                             <p>Featured movies</p>
                         </div>
                     </div>
-                    <div class="row">
+
+                    <div class="row-lined dark">
                         <div class="dos">
                             <p>Everyone is an artist with these apps</p>
                             <p>
@@ -900,7 +908,8 @@
                             <p>Apps for artists</p>
                         </div>
                     </div>
-                    <div class="row">
+
+                    <div class="row-lined dark">
                         <div class="dos">
                             <p>Cutest animal books. While you were all over cats and dogs, we found a couple other adorable
                                 creatures. Alligators.</p>
@@ -909,7 +918,8 @@
                             <p>Animal tales, Monkeys, alligators, mice, and more.</p>
                         </div>
                     </div>
-                    <div class="row">
+
+                    <div class="row-lined dark">
                         <div class="dos">
                             <p>It takes more than guts to change something.</p>
                             <p>
@@ -922,6 +932,7 @@
                                 parts in creating change within their community.</p>
                         </div>
                     </div>
+
                 </div>
             </section>
             <section id="section-3-4">
@@ -939,7 +950,7 @@
                         <h5 class="heavy">We use the editorial approach to build close relationships with our audiences. Follow this in your
                             practice—whether you're writing copy, creating a new experience, or launching a product. </h5>
                     </div>
-                    <div class="row">
+                    <div class="row-lined">
                         <div class="thirds">
                         </div>
                         <div class="thirds">
@@ -955,7 +966,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row-lined">
                         <div class="thirds">
                             <div class="explanation">
                                 <p class="title">Empower, don’t just sell</p>
@@ -976,7 +987,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row-lined">
                         <div class="thirds">
                             <div class="explanation">
                                 <p class="title">Narrate, don’t be random</p>
@@ -996,7 +1007,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row-lined">
                         <div class="thirds">
                             <div class="explanation">
                                 <p class="title">Currate don’t just promote</p>
@@ -1013,7 +1024,7 @@
                                 in social media. </p>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row-lined">
                         <div class="thirds">
                             <div class="explanation">
                                 <p class="title">Co-create, don't just create yourself</p>
@@ -1029,7 +1040,7 @@
                             <p>Experience all that’s possible with Microsoft. </p>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row-lined">
                         <div class="thirds">
                             <div class="explanation">
                                 <p class="title">Build trust, not transaction</p>
@@ -1455,16 +1466,16 @@
                     <div class="row">
                         <p class="title">Banners</p>
                     </div>
-                    <div class="row">
+                    <div class="row-full">
                         <img src="assets/ms-banner.png" alt="Microsoft logo used in banner on large viewport at left">
                     </div>
 
                     <div class="row">
-                        <div class="thirds">
+                        <div class="fat-thirds">
                             <img src="assets/banner-light.png" alt="Microsoft banner on mobile with logo at top light background">
                         </div>
 
-                        <div class="thirds">
+                        <div class="fat-thirds">
                             <img src="assets/banner-dark.png" alt="Microsoft banner on mobile with logo at top dark background">
                         </div>
                     </div>
@@ -1483,16 +1494,16 @@
                     <div class="row">
                         <h5>Here are a few approved examples. If you are looking to use the sybol on its own, reach out to us.</h5>
                     </div>
-                    <div class="row">
-                        <div class="thirds">
+                    <div class="row-twelve">
+                        <div class="fat-thirds">
                             <img src="assets/approved-store.png" alt="approved Microsoft store usage">
                             <p>Approved Microsoft Store usage</p>
                         </div>
-                        <div class="thirds">
+                        <div class="fat-thirds">
                             <img src="assets/approved-store-social.png" alt="approved Microsoft store social usage">
                             <p>Approved Microsoft Store social usage</p>
                         </div>
-                        <div class="thirds">
+                        <div class="fat-thirds">
                             <img src="assets/approved-store-badge.png" alt="approved Microsoft store badge usage">
                             <p>Approved Microsoft Store badge usage</p>
                         </div>
@@ -1508,10 +1519,17 @@
                     <div class="row">
                         <h4>A Microsoft Store icon can be used only for wayfinding purposes, and for graphic continuity</h4>
                     </div>
+                    <!-- spacing -->
+                    <div class="row" role="presentation"></div>
+
                     <div class="row">
                         <h5>With the introduction of the Microsoft logo, we are eliminating the use of Microsoft Store icon in
                             marketing with two exceptions: </h5>
                     </div>
+
+                    <!-- spacing -->
+                    <div class="row" role="presentation"></div>
+                    
                     <div class="row">
                         <div class="thirds">
                             <p class="title">Wayfinding</p>
