--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                     <div class="row">
                         <h4>Top five things to know</h4>
                     </div>
-                    <div class="row-five">
+                    <div class="row-top-five">
                         <div class="half">
                             <span class="numeral">
                                 <h6>1</h6>
@@ -1494,7 +1494,7 @@
                     <div class="row">
                         <h5>Here are a few approved examples. If you are looking to use the sybol on its own, reach out to us.</h5>
                     </div>
-                    <div class="row-twelve">
+                    <div class="row-five">
                         <div class="fat-thirds">
                             <img src="assets/approved-store.png" alt="approved Microsoft store usage">
                             <p>Approved Microsoft Store usage</p>
@@ -1529,7 +1529,7 @@
 
                     <!-- spacing -->
                     <div class="row" role="presentation"></div>
-                    
+
                     <div class="row">
                         <div class="thirds">
                             <p class="title">Wayfinding</p>
