reworking grid sections for better look

--- a/index.html
+++ b/index.html
@@ -1530,7 +1530,7 @@
                     <!-- spacing -->
                     <div class="row" role="presentation"></div>
 
-                    <div class="row">
+                    <div class="row-five">
                         <div class="thirds">
                             <p class="title">Wayfinding</p>
                             <p>When an icon is required to represent Microsoft Store and link to Microsoft Store experiences.
@@ -1542,10 +1542,15 @@
                                 only one without iconic representation. </p>
                         </div>
                     </div>
+
+                    <!-- spacing -->
+                    <div class="row" role="presentation"></div>
+                    <div class="row" role="presentation"></div>
+
                     <div class="row">
                         <p class="title">New iconography system</p>
                     </div>
-                    <div class="row">
+                    <div class="row-five">
                         <div class="thirds">
                             <img src="assets/store-icon-tile.png" alt="Microsoft Store icon">
 
@@ -1559,7 +1564,7 @@
 
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row-five">
                         <div class="thirds">
                             <p>Microsoft Store icon is always used in a tile.</p>
                         </div>
@@ -1573,10 +1578,15 @@
                             </p>
                         </div>
                     </div>
+
+                    <!-- spacing -->
+                    <div class="row" role="presentation"></div>
+                    <div class="row" role="presentation"></div>
+
                     <div class="row">
                         <p class="title">Retired iconography system</p>
                     </div>
-                    <div class="row">
+                    <div class="row-five">
                         <div class="thirds">
                             <img src="assets/retired-xbox-store-logo.png" alt="retired Xbox Store logo">
                         </div>
@@ -1587,7 +1597,7 @@
                             <img src="assets/retired-shopping-bag.png" alt="retired generic shopping bag">
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row-five">
                         <div class="thirds">
                             <p>Xbox Store icon</p>
                         </div>
@@ -1598,7 +1608,11 @@
                             <p>Generic shopping bag</p>
                         </div>
                     </div>
-                    <div class="row"></div>
+
+                    <!-- spacing -->
+                    <div class="row" role="presentation"></div>
+                    <div class="row" role="presentation"></div>
+                    
                     <div class="row">
                         <p class="title">Creating logo lock-ups is not allowed</p>
                     </div>
@@ -1624,7 +1638,7 @@
                     <div class="row">
                         <p class="title">Allowed use</p>
                     </div>
-                    <div class="row">
+                    <div class="row-five">
                         <div class="thirds">
                             <img src="assets/ms-store-text.png" alt="Use Microsoft Store in text">
                         </div>
@@ -1635,7 +1649,7 @@
                             <img src="assets/graphic-continuity-logo.png" alt="use icon as logo for graphic continuity">
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row-five">
                         <div class="thirds">
                             <p>Just use “Microsoft store” in text</p>
                         </div>
@@ -1652,7 +1666,7 @@
                 <div class="wrapper">
                     <span class="badge orange">Microsoft STORE ICON: things to avoid</span>
 
-                    <div class="row">
+                    <div class="row-seven">
                         <div class="half">
                             <p class="title">Do not use the icon as a representation of Microsoft Store.</p>
                         </div>
@@ -1661,7 +1675,7 @@
                         </div>
                     </div>
 
-                    <div class="row">
+                    <div class="row-seven">
                         <div class="half">
                             <img src="assets/no-icon-as-store.png" alt="Don's use the icon as a Microsoft Store representation">
                         </div>
@@ -1670,7 +1684,7 @@
                         </div>
                     </div>
 
-                    <div class="row">
+                    <div class="row-seven">
                         <div class="half">
                             <img src="assets/use-ms-as-text.png" alt="use Microsoft Store as text">
                         </div>
@@ -1679,7 +1693,7 @@
                         </div>
                     </div>
 
-                    <div class="row">
+                    <div class="row-seven">
                         <div class="half">
                             <p>Instead use “Microsoft Store” in text</p>
                         </div>
@@ -1691,7 +1705,7 @@
                     <!-- spacing -->
                     <div class="row" role="presentation"></div>
 
-                    <div class="row">
+                    <div class="row-seven">
                         <div class="half">
                             <p class="title">Don’t use the icon next to other brands or in a sentence.</p>
                         </div>
@@ -1700,7 +1714,7 @@
                         </div>
                     </div>
 
-                    <div class="row">
+                    <div class="row-seven">
                         <div class="half">
                             <img src="assets/dont-use-with-other-logos.png" alt="Do not use Microsoft Store icon with other logos">
                         </div>
@@ -1709,7 +1723,7 @@
                         </div>
                     </div>
 
-                    <div class="row">
+                    <div class="row-seven">
                         <div class="half">
                             <img src="assets/ms-store-as-text.png" alt="Use Microsoft Store as text">
                         </div>
@@ -1718,7 +1732,7 @@
                         </div>
                     </div>
 
-                    <div class="row">
+                    <div class="row-seven">
                         <div class="half">
                             <p>Instead use "Microsoft Store" in text</p>
                         </div>
