--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                     <h5 class="heavy">
                         Our message is what we tell our customers to win their hearts and minds
                     </h5>
-                    <div class="row tall">
+                    <div class="row">
                         <div class="three_cs">
                             <p>Content</p>
 
@@ -483,6 +483,7 @@
                             <p>Experiment and explore hassle-free</p>
                         </div>
                     </div>
+
                     <div class="row">
                         <div class="three_cs">
                             <p>Community</p>
@@ -2656,8 +2657,14 @@
                     </div>
                     <div class="row">
                         <h4>Help us move away from stock photography.
-                            <br> Here are a few good rules for our imagery. </h4>
+                        <br> Here are a few good rules for our imagery. </h4>
                     </div>
+
+                    <!-- spacing -->
+                    <div class="row" role="presentation"></div>
+                    <div class="row" role="presentation"></div>
+
+
                     <div class="row">
                         <div class="half">
                             <div class="title dos">Do this</div>
@@ -2681,7 +2688,12 @@
                             <p>Exclusively westernized settings</p>
                         </div>
                     </div>
-                    <div class="row">
+
+                    <!-- spacing -->
+                    <div class="row" role="presentation"></div>
+                    <div class="row" role="presentation"></div>
+
+                    <div class="row-twelve">
                         <div class="fourths">
                             <img src="assets/no-cards.png" alt="no generic images">
                             <p>Generic</p>
@@ -2699,7 +2711,7 @@
                             <p>Fake emotion, contrived setting</p>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row-twelve">
                         <div class="fourths">
                             <img src="assets/no-gears.png" alt="no generic images">
                             <p>Generic</p>
@@ -2717,7 +2729,7 @@
                             <p>Generic</p>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row-twelve">
                         <div class="fourths">
                             <img src="assets/no-calculator.png" alt="no generic images">
                             <p>Generic</p>
@@ -2735,7 +2747,7 @@
                             <p>Generic</p>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row-twelve">
                         <div class="fourths">
                             <img src="assets/no-beaches.png" alt="no generic images">
                             <p>Generic</p>
