final grid for large desktop

--- a/index.html
+++ b/index.html
@@ -1705,6 +1705,7 @@
 
                     <!-- spacing -->
                     <div class="row" role="presentation"></div>
+                    <div class="row" role="presentation"></div>
 
                     <div class="row-seven">
                         <div class="half">
@@ -2665,7 +2666,7 @@
                     <div class="row" role="presentation"></div>
 
 
-                    <div class="row">
+                    <div class="row-twelve">
                         <div class="half">
                             <div class="title dos">Do this</div>
                             <p>Use real people</p>
@@ -2771,12 +2772,21 @@
                     <div class="row">
                         <h4>Product photography is how we show our products</h4>
                     </div>
+
+                    <!-- spacing -->
+                    <div class="row" role="presentation"></div>
+
                     <div class="row">
                         <h5>It's premium and visually appealing. This is our chance to in all its forms. We are planning a few significant updates here, but for now, focus on the following. We have three types of product photography.</h5>
                     </div>
                     <div class="row">
                         <h5>We use three categories of imagery to help tell the story of our products. </h5>
                     </div>
+
+                    <!-- spacing -->
+                    <div class="row" role="presentation"></div>
+                    <div class="row" role="presentation"></div>
+
                     <div class="row">
                         <div class="fat-thirds">
 
@@ -2811,10 +2821,19 @@
                     <div class="row">
                         <h4>Illustration is how we tell the stories of what customers can achieve with our products </h4>
                     </div>
+
+                    <!-- spacing -->
+                    <div class="row" role="presentation"></div>
+
                     <div class="row">
                         <h5>Illustrations can at times come off as juvenile and too ambiguous. That's why it's very important to be purposeful, not decorative or superfluous, when using them. </h5>
                     </div>
-                    <div class="row">
+
+                    <!-- spacing -->
+                    <div class="row" role="presentation"></div>
+                    <div class="row" role="presentation"></div>
+
+                    <div class="row-twelve">
                         <div class="fourths">
                             <p class="title">Tell a clearer story that photos can’t.</p>
                             <img src="assets/illustration-1.png" alt="mobile of icons">
@@ -2837,6 +2856,10 @@
                             </p>
                         </div>
                     </div>
+
+                    <!-- spacing -->
+                    <div class="row" role="presentation"></div>
+
                     <div class="row">
                         <a href="https://microsoft.sharepoint.com/teams/BrandCentral/Guidelines/Microsoft_illustration_guidelines.pdf" class="full">See complete illustration guide</a>
                     </div>
@@ -2852,21 +2875,22 @@
                     <div class="row" role="presentation"></div>
 
                     
-                    <div class="row">
-                        <div class="half">
-                            <p class="title dos">Do this</p>
+                    <div class="row-seven">
+                        <div class="half dos">
+                            <p class="title">Do this</p>
                             <p>Follow the four principles </p>
                             <p>Invite creators, designers to create their own illustrations for us—using this style</p>
                         </div>
-                        <div class="half">
-                            <p class="title donts">Avoid</p>
+                        <div class="half donts">
+                            <p class="title">Avoid</p>
                             <p>Use illustrations that don't follow the four principles</p>
                             <p> Use a different illustration style</p>
                             <p>Use generic objects and shapes that don't fit in the illustration style</p>
                             <p>Use illustration as a pattern or decoration</p>
                         </div>
                     </div>
-                    <div class="row">
+
+                    <div class="row-seven">
                         <div class="half">
                             <img src="assets/no-patterns.png" alt="no patterns of graphic elements">
                             <p>Don't create patterns of graphic elements</p>
@@ -2877,7 +2901,7 @@
                                 style. </p>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row-seven">
                         <div class="half">
                             <img src="assets/octopus.png" alt="do create a story">
                             <p>Create a story.</p>
@@ -2914,7 +2938,7 @@
                     <div class="row" role="presentation"></div>
                     <div class="row" role="presentation"></div>
 
-                    <div class="row">
+                    <div class="row-seven">
                         <div class="half dos">
                             <p class="title">Do</p>
                             <p>Use monoline illustrations to illustrate simple yet abstract concepts </p>
@@ -2935,6 +2959,11 @@
                     <div class="row">
                         <p class="title">Monoline illustrations examples</p>
                     </div>
+
+                    
+                    <!-- spacing -->
+                    <div class="row" role="presentation"></div>
+
                     <div class="full-row">
                         <img src="assets/arrow.png" alt="left arrow" class="small-img">
                         <img src="assets/restart.png" alt="restart symbol" class="small-img">
@@ -2955,7 +2984,7 @@
                     <div class="row">
                         <p class="title">Monoline illustrations in use</p>
                     </div>
-                    <div class="row">
+                    <div class="row-twelve">
                         <div class="fourths">
                             <img src="assets/line-1.png" alt="monoline truck">
                             <p>Free shipping
