initial build section6

--- a/index.html
+++ b/index.html
@@ -169,7 +169,19 @@
                     </ul>
                 </li>
                 <li role="menuitem">
-                    <a href="#section-6">Building out a communication</a>
+                    <a href="#section-6" class="pink">Building out a communication</a>
+                    <ul class="sub-nav">
+                        <li class="sub-nav__item" role="presentation">
+                            <a  href="#section-6-1" class="pink">Microsoft Stores screens</a>
+                        </li>
+                        <li class="sub-nav__item" role="presentation" >
+                            <a href="#section-6-2" class="pink">Digital Banners</a>
+                        </li>
+                        <li class="sub-nav__item" role="presentation" > 
+                            <a href="#section-6-3" class="pink">Social</a>
+                        </li>
+
+                    </ul>
                 </li>
             </ul>
         </nav>
@@ -3034,6 +3046,67 @@
                     </div>
                     <div class="row">
                         <a href="http://getmwf.com/getting-started/designing/glyphs.html" class="full">See complete monoline illustration guidelines</a>
+                    </div>
+                </div>
+            </section>
+            <section id="section-6" class="small">
+                <div class="wrapper">
+                    <h3>Building out a communication</h3>
+                </div>
+            </section>
+            <section id="section-6-1">
+                <div class="wrapper">
+                    <span class="badge pink">Microsoft store screens</span>
+                    <div class="row">
+                        <h4>Use the Microsoft Store screens to show the Microsoft Store experiences </h4>
+                    </div>
+                    <div class="row">
+                        <h5></h5>
+                    </div>
+                </div>
+            </section>
+            <section id="section-6-2">
+                <div class="wrapper">
+                    <span class="badge pink">Digital banners</span>
+                    <div class="row">
+                        <h4>Use these templates when designing standard banners </h4>
+                    </div>
+                    <div class="row-seven">
+                        <div class="half">
+                            <p class="title">Windows desktop view</p>
+                            <img src="assets/windows-destop.png" alt="desktop view of store screens">
+                        </div>
+                        <div class="half">
+                            <p class="title">Xbox</p>
+                            <img src="assets/xbox-desktop.png" alt="xbox store desktop view">
+                        </div>
+                    </div>
+                    <div class="row-seven">
+                        <div class="half">
+                            <p class="title">Windows laptop view</p>
+                            <img src="assets/windows-laptop.png" alt="windows laptop view">
+                        </div>
+                        <div class="half">
+                            <p class="title">Physical stores</p>
+                            <img src="assets/physical-store.png" alt="physical store image use">
+                        </div>
+                    </div>
+                    <div class="row-seven">
+                        <div class="half">
+                            <p class="title">Microsoft.com</p>
+                            <img src="assets/microsoft-com.png" alt="microsoft.com store view">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="section-6-3">
+                <div class="wrapper">
+                    <span class="badge pink">social</span>
+                    <div class="row">
+                        <h4>Building social communications </h4>
+                    </div>
+                    <div class="row">
+                       <h5>Social media is the space where we build intimate connections with our audiences. Don't just promote products, empower your audiences with the experiences they want. </h5>
                     </div>
                 </div>
             </section>
