--- a/index.html
+++ b/index.html
@@ -3058,11 +3058,37 @@
                 <div class="wrapper">
                     <span class="badge pink">Microsoft store screens</span>
                     <div class="row">
-                        <h4>Use the Microsoft Store screens to show the Microsoft Store experiences </h4>
+                        <h4>Use the Microsoft Store screens to show the Microsoft Store experiences </h4>
                     </div>
                     <div class="row">
                         <h5></h5>
                     </div>
+                    <div class="row-seven">
+                            <div class="half">
+                                <p class="title">Windows desktop view</p>
+                                <img src="assets/windows-desktop.png" alt="desktop view of store screens">
+                            </div>
+                            <div class="half">
+                                <p class="title">Xbox</p>
+                                <img src="assets/xbox-desktop.png" alt="xbox store desktop view">
+                            </div>
+                        </div>
+                        <div class="row-seven">
+                            <div class="half">
+                                <p class="title">Windows laptop view</p>
+                                <img src="assets/windows-laptop.png" alt="windows laptop view">
+                            </div>
+                            <div class="half">
+                                <p class="title">Physical stores</p>
+                                <img src="assets/physical-store.png" alt="physical store image use">
+                            </div>
+                        </div>
+                        <div class="row-seven">
+                            <div class="half">
+                                <p class="title">Microsoft.com</p>
+                                <img src="assets/microsoft-com.png" alt="microsoft.com store view">
+                            </div>
+                        </div>
                 </div>
             </section>
             <section id="section-6-2">
@@ -3071,32 +3097,7 @@
                     <div class="row">
                         <h4>Use these templates when designing standard banners </h4>
                     </div>
-                    <div class="row-seven">
-                        <div class="half">
-                            <p class="title">Windows desktop view</p>
-                            <img src="assets/windows-destop.png" alt="desktop view of store screens">
-                        </div>
-                        <div class="half">
-                            <p class="title">Xbox</p>
-                            <img src="assets/xbox-desktop.png" alt="xbox store desktop view">
-                        </div>
-                    </div>
-                    <div class="row-seven">
-                        <div class="half">
-                            <p class="title">Windows laptop view</p>
-                            <img src="assets/windows-laptop.png" alt="windows laptop view">
-                        </div>
-                        <div class="half">
-                            <p class="title">Physical stores</p>
-                            <img src="assets/physical-store.png" alt="physical store image use">
-                        </div>
-                    </div>
-                    <div class="row-seven">
-                        <div class="half">
-                            <p class="title">Microsoft.com</p>
-                            <img src="assets/microsoft-com.png" alt="microsoft.com store view">
-                        </div>
-                    </div>
+
                 </div>
             </section>
             <section id="section-6-3">
